Allow dashes in project names...

... for mobile and QtQuick projects.
This effectively reverts 8eb60c6598ae4b59a7f58d5b504d2facd051bcb5, which
was probably done for the then-relevant Symbian platform.

Change-Id: I2bfdec822dfdcc353790f0b5980960e30336d147
Task-number: QTCREATORBUG-7602
Reviewed-by: Alessandro Portale <alessandro.portale@nokia.com>